Sun Oct  1  2:54:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: New file.

Fri Aug 18 17:17:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h:Add enums for TokenRestrictedSids and TokenSessionId
	to TOKEN_INFORMATION_CLASS type.
	Add QUOTA_LIMITS type.

Tue Aug  8 21:29:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/userenv.h: New header file.
	* lib/userenv.def: New stub for userenv.dll.

Tue Aug  8 10:25:14 2000  Christopher Faylor <cgf@cygnus.com>

	* include/winuser.h: Correct PCWPSTRUCT typo.
	(discovered by Axel Riese)

2000-07-27  DJ Delorie  <dj@redhat.com>

	* include/windows.h: optimize non-inclusion of repeat headers
	
Fri Jul 21 12:10:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Add missing typedefs for PTOKEN_SOURCE and
	LPTOKEN_SOURCE.

2000-07-11  DJ Delorie  <dj@cygnus.com>

	* include/shlobj.h: add CSIDL_COMMON_*

Tue Jun 27 19:35:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winbase.h: Add stream ids BACKUP_OBJECT_ID,
	BACKUP_REPARSE_DATA and BACKUP_SPARSE_BLOCK.
	Add file open flags FILE_FLAG_OPEN_REPARSE_POINT and
	FILE_FLAG_OPEN_NO_RECALL.
	* winioctl.h: Add device io control codes FSCTL_GET_REPARSE_POINT,
	FSCTL_SET_REPARSE_POINT and FSCTL_DELETE_REPARSE_POINT.
	* winnt.h: Add typedef for GUID.
	Add file attributes FILE_ATTRIBUTE_ENCRYPTED,
	FILE_ATTRIBUTE_SPARSE_FILE, FILE_ATTRIBUTE_REPARSE_POINT and
	FILE_ATTRIBUTE_NOT_CONTENT_INDEXED.
	Add volume attributes FILE_VOLUME_QUOTAS, FILE_SUPPORTS_SPARSE_FILES,
	FILE_SUPPORTS_REPARSE_POINTS, FILE_SUPPORTS_REMOTE_STORAGE,
	FILE_SUPPORTS_OBJECT_IDS and FILE_SUPPORTS_ENCRYPTION.
	Add several reparse point defines and typedefs for REPARSE_DATA_BUFFER,
	REPARSE_GUID_DATA_BUFFER and REPARSE_POINT_INFORMATION.
	* lib/psapi.def: New file.

Thu Jun 22 14:36:19 2000  Christopher Faylor <cgf@cygnus.com>

	* rpcdce.h: Protect OPTIONAL definition since it may be (legally)
	previously defined.
	* windef.h : Ditto.
