@@ -1,0 +1,33 @@
+LIBRARY "IPHLPAPI.DLL"
+EXPORTS
+CreateIpForwardEntry@4
+CreateIpNetEntry@4
+DeleteIpForwardEntry@4
+DeleteIpNetEntry@4
+GetAdaptersInfo@8
+GetBestInterface@8
+GetBestRoute@12
+GetFriendlyIfIndex@4
+GetIcmpStatistics@4
+GetIfEntry@4
+GetIfTable@12
+GetInterfaceInfo@8
+GetIpAddrTable@12
+GetIpForwardTable@12
+GetIpNetTable@12
+GetIpStatistics@4
+GetNetworkParams@8
+GetNumberOfInterfaces@4
+GetRTTAndHopCount@16
+GetTcpStatistics@4
+GetTcpTable@12
+GetUdpStatistics@4
+GetUdpTable@12
+IpReleaseAddress@4
+IpRenewAddress@4
+SetIfEntry@4
+SetIpForwardEntry@4
+SetIpNetEntry@4
+SetIpStatistics@4
+SetIpTTL@4
+SetTcpEntry@4
